# AlphaTradingDesk

./: .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.github/: AlphaTradingDesk-instructions.md
.github/workflows/: atd-deploy.yml  atd-test.yml  cd.yml
database/migrations/: env.py
docs/: GITFLOW.md
docs/architecture/: README.md
docs/deployment/: DEPLOYMENT.md
docs/devops_doc/: 00-OVERVIEW.md  01-DATABASE.md  02-BACKEND.md  03-FRONTEND.md  04-DEV-ENV.md  05-CICD.md  06-PROD-DEPLOY.md  README.md
docs/phases/: PHASE_1_5_SCOPE.md  PHASE_2_VOLATILITY_DRAFT.md  PHASE_4C_NOTIFICATIONS.md  PHASE_5_SCOPE.md
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: _fix_docs.py  _patch_isolated.py  analyze_volatility.py  backup-db.sh  check_migration.py  db_recover.py  debug_profiles.py  deploy.sh  entrypoint.sh  fix_strategy_be_stats.py  fix_weekend_weights.py  refresh-dev-db.sh  sync-db-prod-to-dev.sh  sync-remote-backups.sh  test_alembic_env.py  test_kraken_auth.py  update_kraken_catalog.py  update_vantage_catalog.py
scripts/prod/: README.md  backup-db.sh  deploy.sh  healthcheck.sh  setup-cron.sh  setup-logrotate.sh  setup-server.sh  setup-ssl.sh  (+2 more)
src/: __init__.py  main.py
tests/: _debug_ritual.py  conftest.py  test_brokers.py  test_goals.py  test_health.py  test_investment.py  test_market_analysis.py  test_profiles.py  test_ritual.py  test_seeds.py  test_trades.py
(+254 files in other folders)
