[tool.poetry]
name = "alphatradingdesk"
version = "0.1.0"
description = "Multi-asset trading platform — risk management, trade journal, market analysis"
authors = ["MohamedReda"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg = { extras = ["binary"], version = "^3.2.0" }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
cryptography = "^43.0.0"
python-multipart = "^0.0.22"
# Phase 2 — Volatility Engine
celery = {version = ">=5.4.0", extras = ["redis"]}
redis = ">=5.0.0"
pandas = ">=2.2.0"
structlog = ">=24.0.0"
# pandas-ta: deferred to P2-5 (latest release requires Python >=3.12)

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
